--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
     <h1>Hello.. 😄👏🏽🥳</h1>
 
         <div>
-            <h1><a href="/">Blog de Postagens 🎈</a></h1>
+            <h1><a href="/">Blog de Postagens 🎁</a></h1>
         </div>
 
         <div>
