--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,89 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Django</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <!-- <link rel='stylesheet' href='blog/templates/blog/static/css/blog.css'> -->
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
+    <style media="screen">
+      h1 a, h2 a {
+          color: #C25100;
+          font-family: 'Lobster';
+      }
+
+      .page-header {
+          background-color: #f6a206;
+          margin-top: 0;
+          padding: 20px 20px 20px 40px;
+      }
+
+      .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+          color: #ffffff;
+          font-size: 36pt;
+          text-decoration: none;
+      }
+
+      .content {
+          margin-left: 40px;
+      }
+
+      h1, h2, h3, h4 {
+          font-family: 'Lobster', cursive;
+      }
+
+      .date {
+          color: #828282;
+      }
+
+      .save {
+          float: right;
+      }
+
+      .post-form textarea, .post-form input {
+          width: 100%;
+      }
+
+      .top-menu, .top-menu:hover, .top-menu:visited {
+          color: #ffffff;
+          float: right;
+          font-size: 26pt;
+          margin-right: 20px;
+      }
+
+      .post {
+          margin-bottom: 70px;
+      }
+
+      .post h2 a, .post h2 a:visited {
+          color: #000000;
+      }
+
+    </style>
+
   </head>
   <body>
 
-    <h1>Hello.. 😄👏🏽🥳</h1>
+        <div class="page-header">
+          <h1><a href="/">Hello.. 😄👏</a></h1>
+        </div>
 
-        <div>
+        {% block content %}
           {% for post in posts %}
-        <div>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-            <p>published: {{ post.published_date }}</p>
-        </div>
-        {% endfor %}
-        </div>
+              <div class="post">
+                  <div class="date">
+                      <p>published: {{ post.published_date }}</p>
+                  </div>
+                  <h2><a href="">{{ post.title }}</a></h2>
+                  <p>{{ post.text|linebreaksbr }}</p>
+              </div>
+          {% endfor %}
+        {% endblock %}
+
 
   </body>
 </html>
