--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-    <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
+      <header class="page-header">
+        <div class="container">
+            <h1><a href="/">Blog</a></h1>
+        </div>
+      </header>
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
