--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% extends 'blog/base.html' %}
 {% load static %}
 <html lang="en" dir="ltr">
   <head>
@@ -6,17 +7,22 @@
     <title>Django</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
     <link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}"/>
-
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-
   </head>
   <body>
 
-        <div class="page-header">
+        <!-- <div class="page-header">
           <h1><a href="/">Olá 😄👏</a></h1>
-        </div>
+        </div> -->
+
+        <header class="page-header">
+          <div class="container">
+              <h1><a href="/">Olá</a></h1>
+          </div>
+        </header>
+
+
 
         {% block content %}
           {% for post in posts %}
@@ -24,7 +30,7 @@
                   <div class="date">
                       <p>published: {{ post.published_date }}</p>
                   </div>
-                  <h2><a href="">{{ post.title }}</a></h2>
+                  <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
                   <p>{{ post.text|linebreaksbr }}</p>
               </div>
           {% endfor %}
