--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,12 @@
     <body>
       <header class="page-header">
         <div class="container">
+          {% if user.is_authenticated %}
+              <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          {% endif %}
+              <!-- <a href="{% url 'post_new' %}" class="top-menu">
+                  {% include './icons/file-earmark-plus.svg' %}
+              </a> -->
             <h1><a href="/">Blog</a></h1>
         </div>
       </header>
