--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,9 +10,9 @@
     <body>
       <header class="page-header">
         <div class="container">
-          {% if user.is_authenticated %}
+          <!-- {% if user.is_authenticated %} -->
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-          {% endif %}
+          <!-- {% endif %} -->
               <!-- <a href="{% url 'post_new' %}" class="top-menu">
                   {% include './icons/file-earmark-plus.svg' %}
               </a> -->
